<resources>
    <string name="app_name">骑行邦</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="password">密码</string>
    <string name="user_name">用户名</string>
    <string name="user_login_error">用户名或密码错误</string>
    <string name="nav_collect">我的收藏</string>
    <string name="nav_attention">我的关注</string>
    <string name="nav_posts">我的帖子</string>
    <string name="nav_setting">设置</string>
    <string name="maintenance">保养</string>
    <string name="dry">干货</string>
    <string name="guide">攻略</string>
    <string name="news">新闻</string>
    <string name="speed">时速</string>
    <string name="distance">里程</string>
    <string name="ride_time">时间</string>
    <string name="average_speed">均速</string>
    <string name="user_login">登录</string>
    <string name="user_register">注册</string>
    <string name="ride_meet_guide">请准备好装备，带好钱，带好妹子!!请准备好装备，带好钱，带好妹子!!请准备好装备，带好钱，带好妹子!!请准备好装备，带好钱，带好妹子!!请准备好装备，带好钱，带好妹子!!</string>
    <string name="share">分享</string>
    <string name="ride_book">路书</string>
    <string name="ride_history">骑行历史</string>
    <string name="ride_club">骑行俱乐部</string>
    <string name="my_ride_club">我的俱乐部</string>
    <string name="suggest_GPS">检测到您的GPS定位没有开启，若不开启可能影响定位的准确度。是否开启GPS？</string>
    <string name="user_login_success">登录成功</string>
    <string name="bicycle">整车</string>
    <string name="components">零件</string>
    <string name="message_push">消息推送</string>
    <string name="callback">反馈</string>
    <string name="clean_cache">清除缓存</string>
    <string name="version_update">版本更新</string>
    <string name="about_qxb">关于我们</string>
    <string name="no_price">暂无参考价格</string>
    <string name="bicycle_type">类型</string>
    <string name="bicycle_color">车体颜色</string>
    <string name="bicycle_model">型号</string>
    <string name="bicycle_size">车架型号</string>
    <string name="bicycle_road_type">道路类型</string>
    <string name="bicycle_series">系列</string>
    <string name="bicycle_level">级别</string>
    <string name="bicycle_frame">车架材料</string>
</resources>
