<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <include layout="@layout/toolbar"/>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:orientation="vertical"
        android:background="@android:color/white">
        <RelativeLayout
            android:id="@+id/rl_message_push"
            android:layout_width="match_parent"
            android:layout_height="64dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_marginLeft="32dp"
                android:text="@string/message_push"/>
            <CheckBox
                android:layout_width="32dp"
                android:layout_height="16dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="32dp"
                android:layout_gravity="center_vertical"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/colorPrimaryDark"/>
        <RelativeLayout
            android:id="@+id/rl_callback"
            android:layout_width="match_parent"
            android:layout_height="64dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_marginLeft="32dp"
                android:text="@string/callback"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@color/colorPrimaryDark"/>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:orientation="vertical"
        android:background="@android:color/white">
        <RelativeLayout
            android:id="@+id/rl_clean_cache"
            android:layout_width="match_parent"
            android:layout_height="64dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_marginLeft="32dp"
                android:text="@string/clean_cache"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/colorPrimaryDark"/>
        <RelativeLayout
            android:id="@+id/version_update"
            android:layout_width="match_parent"
            android:layout_height="64dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_marginLeft="32dp"
                android:text="@string/version_update"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/colorPrimaryDark"/>
        <RelativeLayout
            android:id="@+id/rl_about_qxb"
            android:layout_width="match_parent"
            android:layout_height="64dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_marginLeft="32dp"
                android:text="@string/about_qxb"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>