<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:civ="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <android.support.v4.view.ViewPager
        android:id="@+id/vp_ride"
        android:layout_width="match_parent"
        android:layout_height="144dp">
    </android.support.v4.view.ViewPager>
    <android.support.v7.widget.CardView
        android:id="@+id/card_menu_ride"
        android:layout_below="@id/vp_ride"
        android:layout_width="match_parent"
        android:layout_height="144dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/card_login">
        <RelativeLayout
            android:id="@+id/ll_part_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_ride_history"
                android:layout_width="150dp"
                android:layout_height="72dp"
                android:background="@android:color/transparent"
                android:textSize="@dimen/button_text_size"
                android:text="@string/ride_history"/>
            <Button
                android:id="@+id/btn_ride_club"
                android:layout_width="150dp"
                android:layout_height="72dp"
                android:layout_alignParentRight="true"
                android:background="@android:color/transparent"
                android:textSize="@dimen/button_text_size"
                android:text="@string/ride_club"/>
            <Button
                android:id="@+id/btn_road_book"
                android:layout_width="150dp"
                android:layout_height="72dp"
                android:layout_alignParentBottom="true"
                android:background="@android:color/transparent"
                android:textSize="@dimen/button_text_size"
                android:text="@string/ride_book"/>
            <Button
                android:id="@+id/btn_ride_meet"
                android:layout_width="150dp"
                android:layout_height="72dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:background="@android:color/transparent"
                android:textSize="@dimen/button_text_size"
                android:text="约行"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:id="@+id/card_club"
        android:layout_below="@id/card_menu_ride"
        android:layout_width="match_parent"
        android:layout_margin="16dp"
        android:layout_height="124dp"
        android:background="@drawable/card_login">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/my_club_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_ride_club"
                android:textSize="@dimen/caption_text_size"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>
            <View
                android:id="@+id/my_club_divider"
                android:layout_below="@id/my_club_title"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@color/colorDivider"/>
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/my_first_club"
                android:layout_below="@id/my_club_divider"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_head"
                civ:civ_border_width="2dp"
                civ:civ_border_color="@color/colorDivider"/>
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/my_second_club"
                android:layout_alignTop="@id/my_first_club"
                android:layout_toRightOf="@id/my_first_club"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/ic_head"
                civ:civ_border_width="2dp"
                civ:civ_border_color="@color/colorDivider"/>
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/my_third_club"
                android:layout_alignTop="@id/my_first_club"
                android:layout_toRightOf="@id/my_second_club"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/ic_head"
                civ:civ_border_width="2dp"
                civ:civ_border_color="@color/colorDivider"/>
        </RelativeLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>